--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #1c1c1c; /* Fondo oscuro */
-    margin: 0;
+    background-color: #1c1c1c; 
     padding: 0;
-    color: #e0e0e0; /* Texto principal claro */
+    color: #e0e0e0; /
 }
 
 .container {
@@ -23,12 +22,12 @@ body {
 }
 
 .header p {
-    color: #e0e0e0; /* Texto principal claro */
+    color: #e0e0e0; 
     margin-bottom: 20px;
 }
 
 .btn-crear {
-    background-color: #005b4f; /* Verde oscuro/teal */
+    background-color: #005b4f; 
     color: white;
     padding: 10px 20px;
     border: none;
@@ -38,10 +37,10 @@ body {
 }
 
 .table-container {
-    background-color: #2b2b2b; /* Gris carbón para la tabla */
+    background-color: #2b2b2b; 
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Sombra más suave */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
 }
 
 table {
@@ -55,46 +54,46 @@ table th, table td {
 }
 
 table th {
-    background-color: #005b4f; /* Verde oscuro/teal para encabezados */
-    color: #e0e0e0; /* Texto claro en encabezados */
+    background-color: #005b4f; 
+    color: #e0e0e0; 
     font-weight: bold;
 }
 
 table tr:nth-child(even) {
-    background-color: #1c1c1c; /* Fondo oscuro para filas pares */
+    background-color: #1c1c1c; 
 }
 
 a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.7); /* Blanco más opaco */
+    color: rgba(255, 255, 255, 0.7); 
 }
 
 a:hover {
-    color: rgba(255, 255, 255, 1); /* Blanco completo al pasar el mouse */
-    text-decoration: underline; /* Subrayar al pasar el mouse */
+    color: rgba(255, 255, 255, 1); 
+    text-decoration: underline; 
 }
 
 select {
-    background-color: #005b4f; /* Mismo color que el botón */
-    color: white; /* Texto blanco */
-    padding: 10px 20px; /* Espaciado similar */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Mismo radio que el botón */
-    font-size: 16px; /* Tamaño de fuente similar */
-    cursor: pointer; /* Indicador de clic */
-    margin-left: 20px; /* Separación con el botón "Crear Empleado" */
+    background-color: #005b4f; 
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    margin-left: 20px; 
     cursor: pointer;
 }
 
 
 select:focus {
-    outline: none; /* Quitar borde de enfoque predeterminado */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Efecto de sombra al enfocar */
+    outline: none; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .btn-crear:hover {
-    background-color: #00796b; /* Color más oscuro al pasar el mouse */
-    transition: background-color 0.3s; /* Efecto suave */
+    background-color: #00796b; 
+    transition: background-color 0.3s; 
 }
 
 
@@ -118,7 +117,7 @@ select:focus {
 
 
 .form-container {
-    background-color: #2b2b2b; /* Gris carbón */
+    background-color: #2b2b2b; 
     padding: 20px;
     border-radius: 10px;
     max-width: 600px;
@@ -133,7 +132,7 @@ select:focus {
   label {
     display: block;
     margin-bottom: 5px;
-    color: #e0e0e0; /* Texto principal claro */
+    color: #e0e0e0; 
   }
   
   input {
@@ -141,7 +140,7 @@ select:focus {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #1c1c1c; /* Fondo oscuro */
+    background-color: #1c1c1c; 
     color: white;
   }
   
@@ -151,7 +150,7 @@ select:focus {
   }
   
   .btn-crear {
-    background-color: #005b4f; /* Verde oscuro */
+    background-color: #005b4f; 
     color: white;
     padding: 10px 20px;
     border: none;
@@ -161,10 +160,44 @@ select:focus {
   }
   
   .btn-crear:hover {
-    background-color: #00796b; /* Verde oscuro más intenso */
+    background-color: #00796b; 
     transition: background-color 0.3s;
   }
   
   .error {
     color: red;
+  }
+
+  .success-banner {
+    background-color: #005b4f; 
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    margin: 20px 0;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Para que quede sobre el contenido */
+    opacity: 0;
+    animation: fadeInOut 3s forwards; 
+  }
+  
+  /* Animación para que aparezca y desaparezca */
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+    }
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
